tests/NormalTests/paczka1/small_fuzzy/72497945.err
Error in line 2: uPsA A270 67,3
Error in line 4: 5sxs A270 87,3
